11/26/12 animate compass kinematics using Verlet algorithm
11/26/12 thisInstance -> that
11/26/12 wire up Easel.Ticker to call model.tick, so we can animate the compass; add stub for Compass.tick
11/21/12 change CSS to use a sans serif font for HTML controls
11/21/12 fix: make field meter observe magnet orientation
11/21/12 rename view-specific properties to match how they are presented to the user
11/21/12 get rid of Field model element, handle field visibility in the view
11/21/12 patch up Canvas in CanvasQuirks
11/21/12 implement FaradayStage using inheritance instead of composition
11/21/12 switch from Combination Inheritance to Parasitic Combination Inheritance throughout
11/21/12 chain calls to Easel.Graphics methods
11/21/12 for closures, rename thisDisplayObject -> that
11/21/12 rename FieldDisplay -> FieldOutsideDisplay
11/21/12 provide needle size in constructors for field inside and outside the magnet
11/21/12 compute grid spacing for field visualization
11/21/12 update field when magnet orientation changes
11/21/12 first wag at field visualization, hardcoded grid spacing
11/21/12 disable debug output in model
11/21/12 fixed bug with "Flip Polarity" button
11/21/12 remove orientation and alpha args from CompassNeedleDisplay, these are available on supertype
11/21/12 create a specialization of compass needle that knows its location, for use in b-field grid
11/21/12 provide canvas dimensions to field visualization
11/21/12 add module for faraday-html
11/21/12 switch to textfield for entering magnet strength, slider is brain damaged
11/21/12 add HTML slider for magnet strength (doesn't work on FireFox, textfield is substituted)
11/21/12 set alpha of "inside field" display object based on strength of magnet
11/21/12 add Range type
11/21/12 wire up FieldDisplay to magnet model
11/21/12 use a static grid of needles for "inside field", modulate alpha of parent display object based on magnet strength
11/21/12 wire up "See Inside" check box